--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>
   {{title}}
 </h1>
+
+<h3> Example 1: handle cleck event </h3>
+<app-click-me></app-click-me>
+<p>
+  <button (click) = "onClickMe()">Click me!</button>
+  </p>
+  
